test/netlist/error/memory-file-not-found.bop
ROM r (2, 2) = file("file-not-found.txt")

Main() = ()
where
end where;
